--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
         "c3": "^0.7.20",
         "chart.js": "^2.9.3",
         "font-awesome": "^4.7.0",
-        "vue-chartjs": "^3.5.1"
+        "vue-chartjs": "^3.5.1",
+        "vue-sidebar-menu": "^4.7.4"
     },
     "name": "seriti_assessment",
     "version": "1.0.0",
